# Game-Dev-SDL3

./: .gitignore  1  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  run.sh
Game Dev using SDL3/: CMakeLists.txt  sdl3-demo.cpp
data/: Sprite-0001.aseprite
game/: CMakeLists.txt  CMakePresets.json  windows-toolchain.cmake
game/src/: Makefile
game/src/core/: application.h
game/src/driver/: SerialController.h
game/src/game/: Level.cpp  Level.h  bullet.cpp  bullet.h  player.cpp  player.h
src/: CMakeLists.txt  animation.h  cmake_install.cmake  gameobject.h  main.cpp  sdl3-demo.cpp  timer.h
src/core/: animation.h  application.cpp  application.h  camera.h  resourceManager.cpp  resourceManager.h  timer.h
src/driver/: SerialController.cpp
src/game/: Level.cpp  Level.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  gameobject.h  player.cpp  player.h
